// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`guidance text generation snapshots > routing action messages 1`] = `
{
  "buildRedirect": "echo "charm: Build tool redirected. Think in Code — use mcp__plugin_charm_charm__ctx_execute(language: \\"shell\\", code: \\"gradle test --stacktrace && echo \\"done\\" 2>&1 | tail -30\\") to run and print only errors/summary. Do NOT retry with Bash."",
  "curlWgetBlocked": "echo "charm: curl/wget blocked. Think in Code — use mcp__plugin_charm_charm__ctx_execute(language, code) to write code that fetches, processes, and prints only the answer. Or use mcp__plugin_charm_charm__ctx_fetch_and_index(url, source) to fetch and index. Write pure JS with try/catch, no npm deps. Do NOT retry with curl/wget."",
  "inlineHttpBlocked": "echo "charm: Inline HTTP blocked. Think in Code — use mcp__plugin_charm_charm__ctx_execute(language, code) to write code that fetches, processes, and console.log() only the result. Write robust pure JS with try/catch, no npm deps. Do NOT retry with Bash."",
  "webFetchBlocked": "charm: WebFetch blocked. Think in Code — use mcp__plugin_charm_charm__ctx_fetch_and_index(url: "https://example.com/docs", source: "...") to fetch and index, then mcp__plugin_charm_charm__ctx_search(queries: [...]) to query. Or use mcp__plugin_charm_charm__ctx_execute(language, code) to fetch, process, and console.log() only what you need. Write pure JS, no npm deps. Do NOT use curl, wget, or WebFetch.",
}
`;

exports[`guidance text generation snapshots > routing block with ctx commands 1`] = `
"
<context_window_protection>
  <priority_instructions>
    Raw tool output floods your context window. You MUST use charm MCP tools to keep raw data in the sandbox.
  </priority_instructions>

  <tool_selection_hierarchy>
    1. GATHER: mcp__plugin_charm_charm__ctx_batch_execute(commands, queries)
       - Primary tool for research. Runs all commands, auto-indexes, and searches.
       - ONE call replaces many individual steps.
       - Each command: {label: "descriptive section header", command: "shell command"}
       - label becomes the FTS5 chunk title — use descriptive labels for better search.
    2. FOLLOW-UP: mcp__plugin_charm_charm__ctx_search(queries: ["q1", "q2", ...])
       - Use for all follow-up questions. ONE call, many queries.
    3. PROCESSING: mcp__plugin_charm_charm__ctx_execute(language, code) | mcp__plugin_charm_charm__ctx_execute_file(path, language, code)
       - Use for API calls, log analysis, and data processing.
  </tool_selection_hierarchy>

  <forbidden_actions>
    - DO NOT use Bash for commands producing >20 lines of output.
    - DO NOT use Read for analysis (use execute_file). Read IS correct for files you intend to Edit.
    - DO NOT use WebFetch (use mcp__plugin_charm_charm__ctx_fetch_and_index instead).
    - Bash is ONLY for git/mkdir/rm/mv/navigation.
    - DO NOT use mcp__plugin_charm_charm__ctx_execute or mcp__plugin_charm_charm__ctx_execute_file to create, modify, or overwrite files.
      ctx_execute is for data analysis, log processing, and computation only.
  </forbidden_actions>

  <file_writing_policy>
    ALWAYS use the native Write tool to create files and Edit tool to modify files.
    NEVER use mcp__plugin_charm_charm__ctx_execute, mcp__plugin_charm_charm__ctx_execute_file, or Bash to write file content.
    This applies to all file types: code, configs, plans, specs, YAML, JSON, markdown.
  </file_writing_policy>

  <output_constraints>
    <word_limit>Keep your final response under 500 words.</word_limit>
    <artifact_policy>
      Write artifacts (code, configs, PRDs) to FILES using the native Write tool. NEVER return them as inline text.
      Use Edit tool for modifications to existing files.
      Return only: file path + 1-line description.
    </artifact_policy>
    <response_format>
      Your response must be a concise summary:
      - Actions taken (2-3 bullets)
      - File paths created/modified
      - Knowledge base source labels (so parent can search)
      - Key findings
    </response_format>
  </output_constraints>

  <ctx_commands>
    When the user says "ctx stats", "ctx-stats", "/ctx-stats", or asks about context savings:
    → Call the stats MCP tool and display the full output verbatim.

    When the user says "ctx doctor", "ctx-doctor", "/ctx-doctor", or asks to diagnose charm:
    → Call the doctor MCP tool, execute the returned shell command, display results as a checklist.

    When the user says "ctx upgrade", "ctx-upgrade", "/ctx-upgrade", or asks to update charm:
    → Call the upgrade MCP tool, execute the returned shell command, display results as a checklist.

    When the user says "ctx purge", "ctx-purge", "/ctx-purge", or asks to wipe/reset the knowledge base:
    → Call the purge MCP tool with confirm: true. Warn the user this is irreversible.

    After /clear or /compact: knowledge base and session stats are preserved. Inform the user: "charm knowledge base preserved. Use \`ctx purge\` if you want to start fresh."
  </ctx_commands>

</context_window_protection>"
`;

exports[`guidance text generation snapshots > routing block without ctx commands 1`] = `
"
<context_window_protection>
  <priority_instructions>
    Raw tool output floods your context window. You MUST use charm MCP tools to keep raw data in the sandbox.
  </priority_instructions>

  <tool_selection_hierarchy>
    1. GATHER: mcp__plugin_charm_charm__ctx_batch_execute(commands, queries)
       - Primary tool for research. Runs all commands, auto-indexes, and searches.
       - ONE call replaces many individual steps.
       - Each command: {label: "descriptive section header", command: "shell command"}
       - label becomes the FTS5 chunk title — use descriptive labels for better search.
    2. FOLLOW-UP: mcp__plugin_charm_charm__ctx_search(queries: ["q1", "q2", ...])
       - Use for all follow-up questions. ONE call, many queries.
    3. PROCESSING: mcp__plugin_charm_charm__ctx_execute(language, code) | mcp__plugin_charm_charm__ctx_execute_file(path, language, code)
       - Use for API calls, log analysis, and data processing.
  </tool_selection_hierarchy>

  <forbidden_actions>
    - DO NOT use Bash for commands producing >20 lines of output.
    - DO NOT use Read for analysis (use execute_file). Read IS correct for files you intend to Edit.
    - DO NOT use WebFetch (use mcp__plugin_charm_charm__ctx_fetch_and_index instead).
    - Bash is ONLY for git/mkdir/rm/mv/navigation.
    - DO NOT use mcp__plugin_charm_charm__ctx_execute or mcp__plugin_charm_charm__ctx_execute_file to create, modify, or overwrite files.
      ctx_execute is for data analysis, log processing, and computation only.
  </forbidden_actions>

  <file_writing_policy>
    ALWAYS use the native Write tool to create files and Edit tool to modify files.
    NEVER use mcp__plugin_charm_charm__ctx_execute, mcp__plugin_charm_charm__ctx_execute_file, or Bash to write file content.
    This applies to all file types: code, configs, plans, specs, YAML, JSON, markdown.
  </file_writing_policy>

  <output_constraints>
    <word_limit>Keep your final response under 500 words.</word_limit>
    <artifact_policy>
      Write artifacts (code, configs, PRDs) to FILES using the native Write tool. NEVER return them as inline text.
      Use Edit tool for modifications to existing files.
      Return only: file path + 1-line description.
    </artifact_policy>
    <response_format>
      Your response must be a concise summary:
      - Actions taken (2-3 bullets)
      - File paths created/modified
      - Knowledge base source labels (so parent can search)
      - Key findings
    </response_format>
  </output_constraints>

</context_window_protection>"
`;
